Permettre l'exécution depuis une commande maven pour le serveur et depuis un exécutable pour le client